@@ -6,6 +6,7 @@ Phoronix Test Suite (Git)
 - pts-core: Allow test profiles to pass min/max data results through JSON to graphs using MIN_ and MAX_ prefixes
 - pts-core: Support displaying min/max data from the concise (default) display mode text output
 - phodevi: MHz -> GHz fix for the cpu.freq sensor on Apple OS X
+- phodevi: Add fallback support for using ioreg for calculating sys.power power draw on Apple OS X
 
 Phoronix Test Suite 4.6.1-Utsira
 6 June 2013
